{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 14,
  "lineage": "6ff66c8e-4624-68f0-67ee-7d1e5a49ae0f",
  "resources": [
    {
      "module": "module.nic[\"nic1\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/networkInterfaces/web-nic",
            "internal_domain_name_suffix": "naoo22izqboexaehse5clhqyrd.jnbx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/publicIPAddresses/web-pip",
                "subnet_id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet1/subnets/web-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southafricanorth",
            "name": "web-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "dev-rg1"
          },
          "dependencies": [
            "module.pip.azurerm_public_ip.pip",
            "module.rg.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic[\"nic2\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/networkInterfaces/app-nic",
            "internal_domain_name_suffix": "naoo22izqboexaehse5clhqyrd.jnbx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet1/subnets/app-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southafricanorth",
            "name": "app-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "dev-rg1"
          },
          "dependencies": [
            "module.pip.azurerm_public_ip.pip",
            "module.rg.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg[\"nsg1\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "southafricanorth",
            "name": "web-nsg",
            "resource_group_name": "dev-rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg[\"nsg2\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "southafricanorth",
            "name": "app-nsg",
            "resource_group_name": "dev-rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_association[\"nsg_app_association\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet1/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet1/subnets/app-subnet"
          },
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg",
            "module.rg.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_association[\"nsg_web_association\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet1/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet1/subnets/web-subnet"
          },
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg",
            "module.rg.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.pip[\"pip1\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/publicIPAddresses/web-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "102.133.181.167",
            "ip_version": "IPv4",
            "location": "southafricanorth",
            "name": "web-pip",
            "resource_group_name": "dev-rg1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"subnet1\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet1/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg1",
            "virtual_network_name": "dev-vnet1"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"subnet2\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet1/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg1",
            "virtual_network_name": "dev-vnet1"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"vnet1\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "71ee1c68-8019-4b5c-8087-913e259e188b",
            "id": "/subscriptions/1e10c906-b475-44f5-8e2a-ba4f0d6d8803/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet1",
            "location": "southafricanorth",
            "name": "dev-vnet1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "dev-rg1"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}